test/tex/document_class.tex.err

Error at "source" (line 1, column 15):
unexpected [
\documentclass[a4paper,10pt,oneside,openany,final]{memoir}
              ^
