test/tex/document_class.tex
\documentclass[a4paper,10pt,oneside,openany,final]{memoir}
\input{macros}


